update wsit e2e tests pom for migration to mavenized harness
svn path=/trunk/; revision=7338


Former-commit-id: 787e94834103777f316375c985d47c038a4ed507