@@ -54,22 +54,10 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.glassfish.metro</groupId>
-    <artifactId>wsit-e2e</artifactId>
+    <artifactId>wsit-tests-e2e</artifactId>
 
     <name>Metro E2E Tests</name>
     <description>Metro End to End Tests</description>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>jaxws-local-transport</artifactId>
-            <version>${jaxws.ri.version}</version>
-        </dependency>
-    </dependencies>
 
     <properties>
         <netbeans.hint.jdkPlatform>JDK_1.6</netbeans.hint.jdkPlatform>
@@ -142,14 +130,9 @@
                             <version>${project.osgi.version}</version>
                             <databinding>${ws.databinding}</databinding>
                             <transport>${ws.transport}</transport>
-                            <imageUrl>${wsit.hudson.url}/wsit/bundles/metro-standalone/target/metro.zip</imageUrl>
                             <!--<debug>true</debug>-->
                             <vmArgs>
                                 <vmArg>-Xms256m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m</vmArg>
-                                <vmArg>-Dhttp.proxyHost=www-proxy.us.oracle.com</vmArg>
-                                <vmArg>-Dhttp.proxyPort=80</vmArg>
-                                <vmArg>-Dhttps.proxyHost=www-proxy.us.oracle.com</vmArg>
-                                <vmArg>-Dhttps.proxyPort=80</vmArg>
                             </vmArgs>
                         </configuration>
                     </execution>
@@ -178,12 +161,26 @@
     <profiles>
         <profile>
             <id>test-local-image</id>
+            <activation>
+                <property>
+                    <name>!wsit.hudson.url</name>
+                </property>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>${project.groupId}</groupId>
                     <artifactId>metro-standalone</artifactId>
                     <version>${project.version}</version>
                     <type>zip</type>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.persistence</groupId>
+                    <artifactId>eclipselink</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>com.sun.xml.ws</groupId>
+                    <artifactId>jaxws-local-transport</artifactId>
+                    <version>${jaxws.ri.version}</version>
                 </dependency>
             </dependencies>
             <build>
@@ -223,14 +220,56 @@
                         <version>0.1-SNAPSHOT</version>
                         <configuration>
                             <localImage>${project.build.directory}/image</localImage>
-<!--                            <vmArgs>
-                                <vmArg>-Xms256m -Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m</vmArg>
-                                <vmArg>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,address=6000</vmArg>
-                                <vmArg>-Dhttp.proxyHost=www-proxy.us.oracle.com</vmArg>
-                                <vmArg>-Dhttp.proxyPort=80</vmArg>
-                                <vmArg>-Dhttps.proxyHost=www-proxy.us.oracle.com</vmArg>
-                                <vmArg>-Dhttps.proxyPort=80</vmArg>
-                            </vmArgs>-->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>test-remote-image</id>
+            <activation>
+                <property>
+                    <name>wsit.hudson.url</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>prepare-image</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <stripVersion>true</stripVersion>
+                                    <outputDirectory>${project.build.directory}/image</outputDirectory>
+                                    <includeArtifactIds>metro-standalone</includeArtifactIds>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>unzip-image</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>unpack-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/image</outputDirectory>
+                                    <includeArtifactIds>metro-standalone</includeArtifactIds>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.glassfish.metro</groupId>
+                        <artifactId>harness-maven-plugin</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                        <configuration>
+                            <imageUrl>${wsit.hudson.url}/wsit/bundles/metro-standalone/target/metro.zip</imageUrl>
+                            <transportUrl>${transport.hudson.url}/jaxws-ri/transports/local/target/jaxws-local-transport.jar</transportUrl>
                         </configuration>
                     </plugin>
                 </plugins>
